Update Post “2023-11-13-праздник-волейбола”

--- a/src/content/posts/2023-11-13-праздник-волейбола.md
+++ b/src/content/posts/2023-11-13-праздник-волейбола.md
@@ -1,7 +1,7 @@
 ---
 template: blog-post
 title: Праздник волейбола
-slug: "/volleyball "
+slug: /volleyball
 date: 2023-11-11 17:10
 description: "В нашей гимназии прошло ежегодное мероприятие «Праздник волейбола»
   в котором принимали участие учащиеся 8-х, 9-х, 10-х и 11-х классов. "
