--- a/src/content/posts/2023-12-02-квест-«наша-малая-родина».md
+++ b/src/content/posts/2023-12-02-квест-«наша-малая-родина».md
@@ -5,6 +5,7 @@ slug: /bibliotheca/kvest
 date: 2023-12-02 19:16
 description: Квест «Наша малая Родина»
 featuredImage: /assets/photo_2023-12-02_13-17-53.jpg
+author: 
 ---
 В этот холодный ясный день нас вновь приглашает в гости любимая Столинская районная библиотека на очередной квест. Разумеется, мы приняли приглашение и еле успев на автобус помчались в библиотеку.
 
