--- a/src/content/posts/2023-11-18-интеллектуальная-викторина.md
+++ b/src/content/posts/2023-11-18-интеллектуальная-викторина.md
@@ -2,7 +2,7 @@
 template: blog-post
 title: Интеллектуальная викторина
 slug: /quiz
-timeforread: "01"
+timeforread: 01:02
 date: 2023-11-18 18:00
 description: Интеллектуальная викторина
 featuredImage: /assets/photo_2023-11-18_17-51-34.jpg
