--- a/src/content/posts/2023-11-18-интеллектуальная-викторина.md
+++ b/src/content/posts/2023-11-18-интеллектуальная-викторина.md
@@ -9,3 +9,23 @@ featuredImage: /assets/photo_2023-11-18_17-51-34.jpg
 author: "Бондарчук Дмитрий "
 ---
 В шестой школьный день мы провели интеллектуальную викторину. Но перед началом, все пришедшие высказали своё мнение про [вчерашний вечерний сеанс](https://blog-10a.netlify.app/cinema-k), а после этого начался мозговой штурм. Классный руководитель задавал нам вопросы по разным тематикам, после чего мы выходили к доске и записывали их. После такого мероприятия мы расширили свой словарный запас и узнали значения многих старинных слов. Не думаю, что мозговой штурм помог нам отдохнуть и расслабиться, но мозги нужно держать в тонусе. Поэтому отгадываем слова и готовимся к следующей трудовой неделе.
+
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://blog-10a-stolin.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
