--- a/src/content/posts/2023-11-18-поход-в-кинотеатр-на-премьеру-фильма-«киношники».md
+++ b/src/content/posts/2023-11-18-поход-в-кинотеатр-на-премьеру-фильма-«киношники».md
@@ -11,3 +11,23 @@ author: Невдах Александр
 В пятничный вечер мы, вместе с 10Б классом пошли в кинотеатр «Экран» для просмотра нового фильма от киностудии «Беларусьфильм», «Киношники». Сеанс был на 18:00 все учащиеся оперативно собрались рядом с кинотеатром, а затем заняли свои места в зале. Хоть фильм оказался средним, но всё же за время сеанса мы смогли забыть о прошедшей трудовой неделе и погрузится в мир кинематографа.
 
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/eAmZPFqQ-TE?si=iqznZwqW7d7EUEVs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://blog-10a-stolin.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
