--- a/src/content/posts/2023-12-02-квест-«наша-малая-родина».md
+++ b/src/content/posts/2023-12-02-квест-«наша-малая-родина».md
@@ -31,3 +31,23 @@ author: " Невдах Александр, Бондарчук Дмитрий."
 ![6](/assets/photo_8_2023-12-02_19-28-43.jpg "6")
 
 За мероприятие мы зарядились позитивом и энергией для продуктивной учебной и снежной недели. Как всегда, районная библиотека радует нас своими мероприятиями и активностями.
+
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://blog-10a-stolin.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
