--- a/src/content/posts/2023-12-03-ярмарка-талантов-2023.md
+++ b/src/content/posts/2023-12-03-ярмарка-талантов-2023.md
@@ -22,3 +22,23 @@ author: Невдах Александр
 2. Вторая номинация требовала оригинальности и понимания социально гуманистического проекта "Киноуроки в школах мира". Нам необходимо снять видеоролик о практической реализации проекта. Как правило, ролики являлись социальными о защите бездомных животных, детях в детских домах, правильном использовании энергоресурсов, важности сортировки мусора, благотворительных акциях в фонд помощи больным детям.
 
 ***По итогам конкурса мы заняли 3-е место с творческим номером "Обратно в детство" и социальным роликом о важности заботы об окружаем мире.***
+
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://blog-10a-stolin.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
