--- a/src/content/posts/2023-12-04-молодежный-квиз-2023.md
+++ b/src/content/posts/2023-12-04-молодежный-квиз-2023.md
@@ -14,3 +14,24 @@ author: Невдах Александр
 Cреди параллелей 9-11 классов прошел интеллектуальный молодежный квиз. От каждого класса представлена команда в составе 6 человек. Ребята разыграли 5 туров и по итогам квиза заработали определенное количество баллов. Что и определило победителя молодежного квиза внутри первичной организации. Наш класс занял второе место.
 
 ![Наша команда](/assets/изображение_viber_2023-12-02_09-19-52-762.jpg "Наша команда")
+
+
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://blog-10a-stolin.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
