--- a/src/content/posts/2023-11-13-праздник-волейбола.md
+++ b/src/content/posts/2023-11-13-праздник-волейбола.md
@@ -20,17 +20,11 @@ author: Бондарчук Дмитрий
  В этом году в соревнованиях принимали участие более сильные и энергичные игроки в отличие от прошлых годов. Даже несмотря на то, что у нас получилось занять призовое место, мы продолжим усердно работать чтобы достичь лучших результатов и новых вершин, а субботнее мероприятие помогло нам отдохнуть от первой учебной недели и набраться положительными эмоциями на грядущую неделю.
 
 
-<div id="anycomment-app"></div>
+<div id="remark42"></div>
+<script>!function(e,n){for(var o=0;o<e.length;o++){var r=n.createElement("script"),c=".js",d=n.head||n.body;"noModule"in r?(r.type="module",c=".mjs"):r.async=!0,r.defer=!0,r.src=remark_config.host+"/web/"+e[o]+c,d.appendChild(r)}}(remark_config.components||["embed"],document);</script>
 <script>
-AnyComment = window.AnyComment || []; AnyComment.Comments = [];
-AnyComment.Comments.push({
-    "root": "anycomment-app",
-    "app_id": 6224,
-    "language": "ru"
-})
-var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
-s.src = "https://widget.anycomment.io/comment/embed.js";
-var sa = document.getElementsByTagName("script")[0];
-sa.parentNode.insertBefore(s, s.nextSibling);
+  var remark_config = {
+    host: 'https://blog-10a.netlify.app',
+    site_id: 'blog',
+  }
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
