--- a/src/content/posts/2023-11-13-праздник-волейбола.md
+++ b/src/content/posts/2023-11-13-праздник-волейбола.md
@@ -19,12 +19,16 @@ author: Бондарчук Дмитрий
 
  В этом году в соревнованиях принимали участие более сильные и энергичные игроки в отличие от прошлых годов. Даже несмотря на то, что у нас получилось занять призовое место, мы продолжим усердно работать чтобы достичь лучших результатов и новых вершин, а субботнее мероприятие помогло нам отдохнуть от первой учебной недели и набраться положительными эмоциями на грядущую неделю.
 
-
-<div id="remark42"></div>
-<script>!function(e,n){for(var o=0;o<e.length;o++){var r=n.createElement("script"),c=".js",d=n.head||n.body;"noModule"in r?(r.type="module",c=".mjs"):r.async=!0,r.defer=!0,r.src=remark_config.host+"/web/"+e[o]+c,d.appendChild(r)}}(remark_config.components||["embed"],document);</script>
-<script>
-  var remark_config = {
-    host: 'https://blog-10a.netlify.app',
-    site_id: 'blog',
-  }
-</script>
+<div id="sigCommentsBlock"></div>
+	<a href="http://sigcomments.com" style="font-size: 0.6em;">Система комментирования SigComments</a>
+	<script type="text/javascript">
+		(function(){
+			var host_id = '7248';
+			var script = document.createElement('script');
+			script.type = 'text/javascript';
+			script.async = true;
+			script.src = '//sigcomments.com/chat/?host_id='+host_id;
+			var ss = document.getElementsByTagName('script')[0]; 
+			ss.parentNode.insertBefore(script, ss);
+		})();
+	</script>
