--- a/src/content/posts/2023-12-09-день-здоровья-«праздник-футбола».md
+++ b/src/content/posts/2023-12-09-день-здоровья-«праздник-футбола».md
@@ -26,19 +26,16 @@ author: "Бондарчук Дмитрий "
 ![2](/assets/photo_2023-12-09_13-01-14.jpg "2")
 
 Но мы не расстраиваемся, ведь новый год уже через 22 дня и летим в следующую трудовую неделю заряженные позитивом и энергией.
-
-<div id="disqus_thread"></div>
-<script>
-    var disqus_config = function () {
-    this.page.url = "https://blog-10a.netlify.app/football-2023";  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = "football-2023"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://blog-10a-stolin.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<div id="sigCommentsBlock"></div>
+	<a href="http://sigcomments.com" style="font-size: 0.6em;">Система комментирования SigComments</a>
+	<script type="text/javascript">
+		(function(){
+			var host_id = '7248';
+			var script = document.createElement('script');
+			script.type = 'text/javascript';
+			script.async = true;
+			script.src = '//sigcomments.com/chat/?host_id='+host_id;
+			var ss = document.getElementsByTagName('script')[0]; 
+			ss.parentNode.insertBefore(script, ss);
+		})();
+	</script>
