--- a/src/content/posts/2023-11-18-интеллектуальная-викторина.md
+++ b/src/content/posts/2023-11-18-интеллектуальная-викторина.md
@@ -10,22 +10,16 @@ author: "Бондарчук Дмитрий "
 ---
 В шестой школьный день мы провели интеллектуальную викторину. Но перед началом, все пришедшие высказали своё мнение про [вчерашний вечерний сеанс](https://blog-10a.netlify.app/cinema-k), а после этого начался мозговой штурм. Классный руководитель задавал нам вопросы по разным тематикам, после чего мы выходили к доске и записывали их. После такого мероприятия мы расширили свой словарный запас и узнали значения многих старинных слов. Не думаю, что мозговой штурм помог нам отдохнуть и расслабиться, но мозги нужно держать в тонусе. Поэтому отгадываем слова и готовимся к следующей трудовой неделе.
 
-<div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://blog-10a-stolin.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<div id="sigCommentsBlock"></div>
+	<a href="http://sigcomments.com" style="font-size: 0.6em;">Система комментирования SigComments</a>
+	<script type="text/javascript">
+		(function(){
+			var host_id = '7248';
+			var script = document.createElement('script');
+			script.type = 'text/javascript';
+			script.async = true;
+			script.src = '//sigcomments.com/chat/?host_id='+host_id;
+			var ss = document.getElementsByTagName('script')[0]; 
+			ss.parentNode.insertBefore(script, ss);
+		})();
+	</script>
