--- a/src/content/posts/2024-03-02-1-марта-—-международный-день-борьбы-с-наркоманией-и-наркобизнесом.md
+++ b/src/content/posts/2024-03-02-1-марта-—-международный-день-борьбы-с-наркоманией-и-наркобизнесом.md
@@ -5,14 +5,15 @@ slug: /bibliotheca/1-march
 timeforread: 01:01
 date: 2024-03-01 14:50
 description: 1 марта — Международный день борьбы с наркоманией и наркобизнесом.
-  В﻿ очередной раз Центральная библиотека пригласила нас на познавательное
+  В очередной раз Центральная библиотека пригласила нас на познавательное
   мероприятие. На этот раз мероприятие было посвящено международному дню борьбы
   с наркоманией и наркобизнесом. Нам рассказали о самых распространённых
   причинах и последствиях употребления наркотиков.
 featuredImage: /assets/изображение_viber_2024-03-01_15-20-11-972-1076x800.jpg
+tags: ["Библиотека", "Наркотики", "Международный день"]
 author: Невдах Александр
 ---
-[В﻿ очередной раз](https://blog-10a.netlify.app/bibliotheca/kvest) Центральная библиотека пригласила нас на познавательное мероприятие. На этот раз мероприятие было посвящено международному дню борьбы с наркоманией и наркобизнесом. Нам рассказали о самых распространённых причинах и последствиях употребления наркотиков.
+[В очередной раз](https://blog-10a.netlify.app/bibliotheca/kvest) Центральная библиотека пригласила нас на познавательное мероприятие. На этот раз мероприятие было посвящено международному дню борьбы с наркоманией и наркобизнесом. Нам рассказали о самых распространённых причинах и последствиях употребления наркотиков.
 
 ![1](/assets/изображение_viber_2024-03-01_15-21-01-127-1400x768.jpg "1")
 
@@ -20,7 +21,7 @@ author: Невдах Александр
 
 ![1](/assets/изображение_viber_2024-03-01_15-21-01-765-1079x800.jpg "1")
 
-З﻿акончить эту статью хочется хорошей фразой:
+Закончить эту статью хочется хорошей фразой:
 
 > *Не тратьте время на наркотики. В мире так много дел, и вы можете что-то изменить, если будете здоровы и сильны.*
 
