--- a/src/content/posts/2024-03-15-15-марта-—-день-конституции-республики-беларусь.md
+++ b/src/content/posts/2024-03-15-15-марта-—-день-конституции-республики-беларусь.md
@@ -4,12 +4,13 @@ title: 15 марта — День Конституции Республики Б
 slug: /Constitution-Day
 timeforread: 01:02
 date: 2024-03-15 17:30
-description: С﻿нова и снова библиотека приглашает нас на мероприятие. В этот
+description: Снова и снова библиотека приглашает нас на мероприятие. В этот
   раз, мероприятие было посвящено Дню Конституции Республики Беларусь.
 featuredImage: /assets/photo_2_2024-03-15_19-05-02.jpg
+tags: ["Библиотека", "Праздник"]
 author: Невдах Александр
 ---
-С﻿нова и снова библиотека приглашает нас на мероприятие. В этот раз, мероприятие было посвящено Дню Конституции Республики Беларусь.
+Снова и снова библиотека приглашает нас на мероприятие. В этот раз, мероприятие было посвящено Дню Конституции Республики Беларусь.
 
 
 
