--- a/src/content/posts/2024-02-10-игра-практикум-«глаза-наши-незаменимые-помощники».md
+++ b/src/content/posts/2024-02-10-игра-практикум-«глаза-наши-незаменимые-помощники».md
@@ -4,16 +4,17 @@ title: Игра-практикум «Глаза- наши незаменимые
 slug: /game-practice
 timeforread: 00:30
 date: 2024-02-10 18:45
-description: В﻿ эту субботу мы узнали много нового про наши глаза. В ходе
+description: В эту субботу мы узнали много нового про наши глаза. В ходе
   мероприятия мы вернулись 9 класс на урок биологии, чтобы вспомнить строение
   глаза. Также, мы поговорили про шрифт Луи Брайля, узнали новое слово
   тифлопедагогика (область науки о воспитании и обучении лиц с нарушением
   зрения), и посмотрели памятник «Слепая девочка читает». В конце мероприятия,
   мы вспомнили некоторые половицы, связанные с глазами.
 featuredImage: /assets/photo_4_2024-02-10_17-28-20.jpg
+tags: ["Биология", "Здоровье"]
 author: Невдах Александр
 ---
-В﻿ эту субботу мы узнали много нового про наши глаза. В ходе мероприятия мы вернулись в 9 класс на урок биологии, чтобы вспомнить строение глаза. Также мы поговорили про шрифт Луи Брайля, узнали новое слово тифлопедагогика (область науки о воспитании и обучении лиц с нарушением зрения) и посмотрели памятник «Слепая девочка читает». В конце мероприятия мы вспомнили некоторые половицы, связанные с глазами.
+В эту субботу мы узнали много нового про наши глаза. В ходе мероприятия мы вернулись в 9 класс на урок биологии, чтобы вспомнить строение глаза. Также мы поговорили про шрифт Луи Брайля, узнали новое слово тифлопедагогика (область науки о воспитании и обучении лиц с нарушением зрения) и посмотрели памятник «Слепая девочка читает». В конце мероприятия мы вспомнили некоторые половицы, связанные с глазами.
 
 ![3](/assets/photo_2_2024-02-10_17-28-20.jpg "4")
 
