--- a/src/content/posts/2024-03-13-выставка-столинщина-сегодня-можем-и-делаем.md
+++ b/src/content/posts/2024-03-13-выставка-столинщина-сегодня-можем-и-делаем.md
@@ -15,6 +15,7 @@ description: >
   Приятным завершением открытия выставки стала дегустация представленной
   продукции.
 featuredImage: /assets/изображение_viber_2024-03-12_18-50-02-655.jpg
+tags: ["Выставка", "Год качества"]
 author: Невдах Александр
 ---
 В рамках реализации целей и задач 2024 года качества в Столинском краеведческом музее организована выставка продукции предприятий Столинщины. 12 марта мы побывали на торжественном открытии выставки, встретились с руководителями ведущих предприятий города и района. Выставка будет функционировать до 30 апреля. Здесь можно подробнее ознакомиться с продукцией предприятий "Рольник", "Горынь", "Берестейский пекарь", "Глинка" и др. В скором времени выставку пополнит продукция и "Савушкина продукта". Приятным завершением открытия выставки стала дегустация представленной продукции.
