--- a/src/content/posts/2024-05-20-маленькие-победы-большое-значение-годовой-отчет.md
+++ b/src/content/posts/2024-05-20-маленькие-победы-большое-значение-годовой-отчет.md
@@ -25,4 +25,41 @@ author: 10А
 
 💬 Поделитесь своими впечатлениями и обсудите прочитанное с друзьями, семьёй и коллегами. Ваш интерес и внимание - лучшая награда для нас!
 
-👀 **Не упустите шанс узнать больше о нашем классе! Прочтите буклет уже сегодня! Читайте [здесь](https://drive.google.com/file/d/1USamQ8hsqbw9CzsuVNy3jbrywC6NBf3S/view?usp=drive_link)!**
+👀 **Не упустите шанс узнать больше о нашем классе! Прочтите буклет уже сегодня!**
+
+
+<div class="download-block">
+        <p>Нажмите на кнопку ниже, чтобы скачать или открыть наш буклет в формате PDF.</p>
+        <a href="/assets/Маленькие победы, большое значение годовой отчет.pdf" class="download-button" download>Скачать</a>
+        <a href="https://drive.google.com/file/d/1USamQ8hsqbw9CzsuVNy3jbrywC6NBf3S/view?usp=drive_link" class="download-button">Открыть</a>
+    </div>
+<style>
+.download-block {
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(114, 238, 12, 0.62);
+    padding: 10px;
+    text-align: center;
+    max-width: 800px;
+    max-height: 300px;
+    margin: 0 auto;
+}
+.download-block h2 {
+    color: #333;
+}
+.download-block p {
+    color: #667;
+}
+.download-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color:rgb(81, 255, 0);
+    color:#000000;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+.download-button:hover {
+    background-color: #0056b3;
+}
+  </style>
